; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_mt9m001.c_mt9m001_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_mt9m001.c_mt9m001_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.soc_camera_device* }
%struct.soc_camera_device = type { i32* }
%struct.mt9m001 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @mt9m001_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mt9m001_remove(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.mt9m001*, align 8
  %4 = alloca %struct.soc_camera_device*, align 8
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %5 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %6 = call %struct.mt9m001* @to_mt9m001(%struct.i2c_client* %5)
  store %struct.mt9m001* %6, %struct.mt9m001** %3, align 8
  %7 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %8 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.soc_camera_device*, %struct.soc_camera_device** %9, align 8
  store %struct.soc_camera_device* %10, %struct.soc_camera_device** %4, align 8
  %11 = load %struct.soc_camera_device*, %struct.soc_camera_device** %4, align 8
  %12 = getelementptr inbounds %struct.soc_camera_device, %struct.soc_camera_device* %11, i32 0, i32 0
  store i32* null, i32** %12, align 8
  %13 = load %struct.soc_camera_device*, %struct.soc_camera_device** %4, align 8
  %14 = call i32 @mt9m001_video_remove(%struct.soc_camera_device* %13)
  %15 = load %struct.mt9m001*, %struct.mt9m001** %3, align 8
  %16 = call i32 @kfree(%struct.mt9m001* %15)
  ret i32 0
}

declare dso_local %struct.mt9m001* @to_mt9m001(%struct.i2c_client*) #1

declare dso_local i32 @mt9m001_video_remove(%struct.soc_camera_device*) #1

declare dso_local i32 @kfree(%struct.mt9m001*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
